# enigma

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  script
include/: machine.h
main/: CMakeLists.txt  machine.c  machine.h  main.c
src/: main.c
src/machine/: machine.c
